// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #fff;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #fff;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Render height100 - value[0] 1`] = `
.emotion-0 {
  height: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #fff;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #fff;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #fff;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #fff;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Render required = true height100 - value[0] 1`] = `
.emotion-0 {
  height: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #fff;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #fff;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Render required = true shaded - value[0] 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #f1f1f1;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #f1f1f1;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #f1f1f1;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Render required = true styleheight - value[0] 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #fff;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #fff;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Render shaded - value[0] 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #f1f1f1;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #f1f1f1;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #f1f1f1;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Render styleheight - value[0] 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  text-align: center;
  color: #bfbfbf;
  font-size: 12px;
  padding-top: 2px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div
  class="emotion-0"
>
  <div
    style="width: 50px; margin: auto; height: 50px;"
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style="fill: #bfbfbf;"
        />
        <rect
          class="loading-bar"
          height="59"
          style="fill: #fff;"
          width="30"
          x="16"
          y="15"
        />
        <rect
          class="loading-bar-sm"
          height="25"
          style="fill: #fff;"
          width="25"
          x="53"
          y="52"
        />
      </g>
    </svg>
    <div
      class="emotion-1"
    >
      Lowdefy
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema height100 1`] = `true`;

exports[`Test Schema height100 2`] = `null`;

exports[`Test Schema shaded 1`] = `true`;

exports[`Test Schema shaded 2`] = `null`;

exports[`Test Schema styleheight 1`] = `true`;

exports[`Test Schema styleheight 2`] = `null`;
